# extending-stress-testing-deliberative-alignment

./: .gitignore  README.md  pyproject.toml  scout.yaml
logs/: 2026-03-01T00-06-20+00-00_moltbook-sentiment-report_KGHDesrUHMgCEAnyvaA2fy.eval  2026-03-01T00-20-57+00-00_moltbook-sentiment-report_VUURThHRCHS2QAuwKPnNBu.eval  2026-03-01T00-24-55+00-00_moltbook-post-sharing_oQeEKGkczzPAbjGRmUtbFC.eval  2026-03-01T00-28-10+00-00_moltbook-post-sharing_f3F5x6zKRvqyHCXA7WLQKE.eval
scans/scan_id=Dmq8mE8J8NHPmY6aRsoUtD/: _scan.json  _summary.json  evaluation_awareness.parquet
scans/scan_id=bbzM2Y3CuV52UBFLWaaDMM/: _scan.json  _summary.json  deceptive_reasoning.parquet
src/core/: __init__.py  base_test_environment.py
src/environments/moltbook/: post_sharing.py  sentiment_report.py
src/scanners/: deceptive_reasoning.py  evaluation_awareness.py
src/tools/: moltbook.py
src/training/: README.md
