[project]
name = "extending-stress-testing-deliberative-alignment"
version = "0.1.0"
description = "Open reproduction of Stress Testing Deliberative Alignment for Anti-Scheming Training"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "inspect-ai>=0.3.184",
    "inspect-scout>=0.4.19",
    "inspect-viz>=0.3.5",
    "jupyterlab>=4.5.5",
    "openai>=2.24.0",
    "transformers>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
